--- a/scss/_html.scss
+++ b/scss/_html.scss
@@ -42,6 +42,7 @@ html.bcbb-theme {
     h1,
     .h1 {
       font-size: $fontSize-h1;
+      font-weight: 700;
     }
 
     h2,
