--- a/scss/overrides/_bootstrap.scss
+++ b/scss/overrides/_bootstrap.scss
@@ -15,5 +15,6 @@
 
   .navbar-brand .site-title {
     text-transform: none;
+    letter-spacing: normal;
   }
 }
